Test commit with hero changes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Team</a>
                         </li>
-                        <li class="nav-item">
+<!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
-                        </li> 
+                        </li>  -->
 
                     </ul>
                 </div> 
@@ -58,25 +58,25 @@
         <!-- Header Nav -->
 
         <div class="heroSectionContent white">
-            <h1>Headline Message</h1>
-            <h2>SUB HEADLINE MESSAGE</h2>
+            <h1>Insurance with heart</h1>
+            <h2>Motor, home & contents insurance owned by you</h2>
             <div class="heroSectionBtns">
-                <button class="hover_ease_5 heroLearnMore white ">Learn More</button>
-                <button class="hover_ease_5 heroSubscribe white ">Subscribe</button>
+                <a href="#learn-more-anchor"><button class="hover_ease_5 heroLearnMore white">Learn More</button></a>
+                <!-- <button class="hover_ease_5 heroSubscribe white ">Subscribe</button> -->
             </div>
         </div>
 
     </div>
 
-    <div class="heroHightlights white">
+<!--     <div class="heroHightlights white">
         <h3 class="heroHightlight_head">Hightlight headline</h3>
         <p>its a dummy text as highlight description</p>
-    </div>
+    </div> -->
 
 </div>
 
 
-<div class="section section-1">
+<div class="section section-1" id="learn-more-anchor">
     <div class="sectionContainer">
         <div class="sectionContain">
             <div class="sectionContainLeft">
