--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="heroSectionContent white">
             <h1>Insurance with heart</h1>
-            <h2>Motor, home & contents insurance owned by you</h2>
+            <h2 class="light">Motor, home & contents insurance owned by you</h2>
             <div class="heroSectionBtns">
                 <a href="#learn-more-anchor"><button class="hover_ease_5 heroLearnMore white">Learn More</button></a>
                 <!-- <button class="hover_ease_5 heroSubscribe white ">Subscribe</button> -->
