Content updates and firebase setup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -120,7 +122,7 @@
                     </div>
                 </div>
 
-                <a class="sectionSeeMore" href="#">Why we want to change insurance<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                <a class="sectionSeeMore" href="./team.html">Why we want to change insurance<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -244,7 +246,7 @@
                     </div>
 
                 </div>
-                <a class="sectionSeeMore" href="#">LEARN More About Picnic Insurance Coverage <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+<!--                 <a class="sectionSeeMore" href="#">LEARN More About Picnic Insurance Coverage <i class="fa fa-arrow-right" aria-hidden="true"></i></a> -->
             </div>
         </div>
     </div>
