--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="#">Security Token Offer</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Roadmap</a>
+                            <a class="nav-link" href="./roadmap.html">Roadmap</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./team.html">Team</a>
