Minor Hover Updates

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Home</a>
+                            <a class="nav-link hover_ease_2" href="./index.html">Home</a>
                         </li>
 <!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Security Token Offer</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="./roadmap.html">Roadmap</a>
+                            <a class="nav-link hover_ease_2" href="./roadmap.html">Roadmap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./team.html">Team</a>
+                            <a class="nav-link hover_ease_2" href="./team.html">Team</a>
                         </li>
 <!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -67,7 +67,7 @@
             <h1>Insurance with heart</h1>
             <h2 class="light">Motor, home & contents insurance owned by you</h2>
             <div class="heroSectionBtns">
-                <a href="#learn-more-anchor"><button class="hover_ease_5 heroLearnMore white">Show Me More</button></a>
+                <a href="#learn-more-anchor"><button class="hover_ease_2 heroLearnMore white">Show Me More</button></a>
                 <!-- <button class="hover_ease_5 heroSubscribe white ">Subscribe</button> -->
             </div>
         </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
 
-                <a class="sectionSeeMore" href="./team.html">Why we want to change insurance<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                <a class="sectionSeeMore hover_ease_2" href="./team.html">Why we want to change insurance<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -269,7 +269,7 @@
 
                     <p>By participating in the Picnic Security Token Offer, you're not just buying an asset that has the potential to add to your wealth - you're helping to transform the insurance industry and lowering the costs to protect your family and others around the world.</p>
                 </div>
-                <a class="sectionSeeMore" href="#">Learn more about our upcoming STO<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                <a class="sectionSeeMore hover_ease_2" href="#">Learn more about our upcoming STO<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -305,10 +305,9 @@
             </div>
             <h4 class="section-5-slideName">Mark Arnold</h4>
             <h4 class="section-5-slideTitle">Founder & Chair</h4>
-<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/markearnold/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/markearnold/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
 <!--                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -325,10 +324,9 @@
             </div>
             <h4 class="section-5-slideName">Charles Pollack</h4>
             <h4 class="section-5-slideTitle">Chief Executive Officer</h4>
-<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/charles-pollack-b86555a/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/charles-pollack-b86555a/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
   <!--                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -348,7 +346,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/john-connor-7485b323/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/john-connor-7485b323/"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
        <!--              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -368,7 +366,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -388,7 +386,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/martinjwells/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/martinjwells/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                    <!--  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -408,7 +406,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/cedricwaldburger/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/cedricwaldburger/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -428,7 +426,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/andycornish/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/andycornish/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                  <!--    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -448,7 +446,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/sherft/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sherft/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
@@ -466,7 +464,7 @@
 <!--         <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
         <div class="section-5-slideSocial">
             <ul>
-                <li><a href="https://www.linkedin.com/in/chris-overs-bb1717154/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/chris-overs-bb1717154/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                <!--  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
             </ul>
         </div>
@@ -501,11 +499,11 @@
                                     <div class="section-6Left">
                                         <img src="images/tia-jones-390114-unsplash.png" alt="Los Angeles" />
                                         <div class="section-6Arrow">
-                                             <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                             <a class="carousel-control-prev hover_ease_2" href="#demo" data-slide="prev">
                                                 <img class="n_arrow"  src="images/Right arrow.png" alt=".." />
                                                 <img class="h_arrow" src="images/whitearrow.png" alt=".." />
                                             </a>
-                                            <a class="carousel-control-next" href="#demo" data-slide="next">
+                                            <a class="carousel-control-next hover_ease_2" href="#demo" data-slide="next">
                                                 <img class="n_arrow"  src="images/Right arrow.png" alt=".." />
                                                 <img class="h_arrow" src="images/whitearrow.png" alt=".." />
                                             </a>
@@ -668,7 +666,7 @@
                             <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
                         </div>
                         <div class="col-md-4">
-                            <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans" />
+                            <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
                         </div>
                     </div>
                 </form>
@@ -689,7 +687,7 @@
                         <div class="footerLogo">
                             <img class="logo mb-3" src="images/logo_white.svg" alt="Footer Logo" />
                             <br>
-                            <p>ABN: 78 615 792 982</p>
+                            <a class="hover_ease_2" href="tel:78615792982">ABN: 78 615 792 982</a>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -705,8 +703,8 @@
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a href="">Privacy Policy</a></li>
-                                <li><a href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
@@ -714,14 +712,9 @@
                         <div class="footSection socialIcons">
                             <h4 class="footHead">Social</h4>
                             <ul>
-                                <li><a href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
-<!--                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                                <li><a class="hover_ease_2" href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
                             </ul>
                         </div>
                     </div>
