--- a/roadmap.html
+++ b/roadmap.html
@@ -39,16 +39,16 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Home</a>
+                            <a class="nav-link hover_ease_2" href="./index.html">Home</a>
                         </li>
-                        <!-- <li class="nav-item">
+<!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Security Token Offer</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="./roadmap.html">Roadmap</a>
+                            <a class="nav-link hover_ease_2" href="./roadmap.html">Roadmap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./team.html">Team</a>
+                            <a class="nav-link hover_ease_2" href="./team.html">Team</a>
                         </li>
 <!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -196,7 +196,7 @@
                                 <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
                             </div>
                             <div class="col-md-4">
-                                <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans" />
+                                <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
                             </div>
                         </div>
                     </form>
@@ -217,22 +217,26 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="footerLogo">
-                            <img src="images/logo.png" alt="Footer Logo" />
+                            <img class="logo mb-3" src="images/logo_white.svg" alt="Footer Logo" />
+                            <br>
+                            <a class="hover_ease_2" href="tel:78615792982">ABN: 78 615 792 982</a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="footSection">
                             <h4 class="footHead">Address</h4>
-                            <p>Level 3, 11 New Street,Sydney, NSW, Australia</p>
-                            <a href="tel:78615792982">78 615 792 982</a>
+                            <p>Level 4, 11 York St</p>
+                            <p>Sydney</p>
+                            <p>NSW, Australia</p>
+                            <p>1300 PICNIC</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a href="">Privacy Policy</a></li>
-                                <li><a href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
@@ -240,14 +244,9 @@
                         <div class="footSection socialIcons">
                             <h4 class="footHead">Social</h4>
                             <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
                             </ul>
                         </div>
                     </div>
