--- a/team.html
+++ b/team.html
@@ -40,16 +40,16 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Home</a>
+                            <a class="nav-link hover_ease_2" href="./index.html">Home</a>
                         </li>
 <!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Security Token Offer</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="./roadmap.html">Roadmap</a>
+                            <a class="nav-link hover_ease_2" href="./roadmap.html">Roadmap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./team.html">Team</a>
+                            <a class="nav-link hover_ease_2" href="./team.html">Team</a>
                         </li>
 <!--                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -156,7 +156,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/markearnold/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/markearnold/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
 <!--                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -176,7 +176,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/charles-pollack-b86555a/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/charles-pollack-b86555a/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
   <!--                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -196,7 +196,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/john-connor-7485b323/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/john-connor-7485b323/"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
        <!--              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -216,7 +216,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -236,7 +236,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/martinjwells/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/martinjwells/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                    <!--  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -256,7 +256,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/cedricwaldburger/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/cedricwaldburger/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -276,7 +276,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/andycornish/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/andycornish/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                  <!--    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -296,7 +296,7 @@
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/sherft/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sherft/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
@@ -314,7 +314,7 @@
 <!--         <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
         <div class="section-5-slideSocial">
             <ul>
-                <li><a href="https://www.linkedin.com/in/chris-overs-bb1717154/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/chris-overs-bb1717154/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                <!--  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
             </ul>
         </div>
@@ -337,7 +337,7 @@
              <div class="col-md-7">
                 <div class="teamChatWrapRight">
                     <h4 class="sectionSubHead">JOIN US ON TELEGRAM</h4>
-                    <button class="btn_trans">TELEGRAM</button>
+                    <button class="btn_trans hover_ease_2">TELEGRAM</button>
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
                         <div class="footerLogo">
                             <img class="logo mb-3" src="images/logo_white.svg" alt="Footer Logo" />
                             <br>
-                            <p>ABN: 78 615 792 982</p>
+                            <a class="hover_ease_2" href="tel:78615792982">ABN: 78 615 792 982</a>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -372,8 +372,8 @@
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a href="">Privacy Policy</a></li>
-                                <li><a href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
@@ -381,14 +381,10 @@
                         <div class="footSection socialIcons">
                             <h4 class="footHead">Social</h4>
                             <ul>
-                                <li><a href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
-<!--                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                                <li><a class="hover_ease_2" href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a class="hover_ease_2" href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
